// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/process/lookup/index .lookupUpdates() disables major release separation (major) 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "newVersion": "0.4.4",
    "updateType": "pin",
  },
  {
    "bucket": "latest",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() disables major release separation (minor) 1`] = `
[
  {
    "bucket": "latest",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles PEP440 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "==0.9.4",
    "newVersion": "0.9.4",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "==0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "patch",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "==1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles digest pin 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8.0.0",
  "dependencyUrl": undefined,
  "fixedVersion": "8.0.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "bucket": "non-major",
      "newDigest": "sha256:abcdef1234567890",
      "newMajor": 8,
      "newMinor": 1,
      "newValue": "8.1.0",
      "newVersion": "8.1.0",
      "updateType": "minor",
    },
    {
      "isPinDigest": true,
      "newDigest": "sha256:0123456789abcdef",
      "newValue": "8.0.0",
      "updateType": "pinDigest",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles digest pin for non-version 1`] = `
{
  "updates": [
    {
      "isPinDigest": true,
      "newDigest": "sha256:abcdef1234567890",
      "newValue": "alpine",
      "updateType": "pinDigest",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles digest pin for up to date version 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8.1.0",
  "dependencyUrl": undefined,
  "fixedVersion": "8.1.0",
  "homepage": undefined,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "isPinDigest": true,
      "newDigest": "sha256:abcdef1234567890",
      "newValue": "8.1.0",
      "updateType": "pinDigest",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles digest update 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8.0.0",
  "dependencyUrl": undefined,
  "fixedVersion": "8.0.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "bucket": "non-major",
      "newDigest": "sha256:abcdef1234567890",
      "newMajor": 8,
      "newMinor": 1,
      "newValue": "8.1.0",
      "newVersion": "8.1.0",
      "updateType": "minor",
    },
    {
      "newDigest": "sha256:0123456789abcdef",
      "newValue": "8.0.0",
      "updateType": "digest",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles digest update for non-version 1`] = `
{
  "updates": [
    {
      "newDigest": "sha256:abcdef1234567890",
      "newValue": "alpine",
      "updateType": "digest",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles git submodule update 1`] = `
{
  "updates": [
    {
      "newDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
      "newValue": undefined,
      "updateType": "digest",
    },
  ],
  "versioning": "git",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles github 404 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles packagist 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles pypi 404 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles replacements 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "1.4.1",
  "dependencyUrl": undefined,
  "fixedVersion": "1.4.1",
  "homepage": undefined,
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": [
    {
      "newName": "r",
      "newValue": "2.0.0",
      "updateType": "replacement",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles sourceUrl packageRules with version restrictions 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "0.9.99",
  "dependencyUrl": undefined,
  "fixedVersion": "0.9.99",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": [
    {
      "bucket": "major",
      "newMajor": 1,
      "newMinor": 3,
      "newValue": "1.3.0",
      "newVersion": "1.3.0",
      "releaseTimestamp": "2015-04-26T16:42:11.311Z",
      "updateType": "major",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles the in-range-only strategy and updates lockfile within range 1`] = `
[
  {
    "bucket": "non-major",
    "isLockfileUpdate": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.2.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles unknown datasource 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() handles update-lockfile 1`] = `
[
  {
    "bucket": "non-major",
    "isLockfileUpdate": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.2.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() ignores deprecated 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "1.3.0",
  "dependencyUrl": undefined,
  "deprecationMessage": "On registry \`https://registry.npmjs.org\`, the "latest" version of dependency \`q2\` has the following deprecation notice:

\`true\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake.",
  "fixedVersion": "1.3.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": [
    {
      "bucket": "non-major",
      "newMajor": 1,
      "newMinor": 4,
      "newValue": "1.4.0",
      "newVersion": "1.4.0",
      "releaseTimestamp": "2015-05-09T16:52:40.699Z",
      "updateType": "minor",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() ignores pinning for ranges when other upgrade exists 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "updateType": "pin",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() is deprecated 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "1.3.0",
  "dependencyUrl": undefined,
  "fixedVersion": "1.3.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceDirectory": "test",
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": [
    {
      "bucket": "non-major",
      "newMajor": 1,
      "newMinor": 4,
      "newValue": "1.4.1",
      "newVersion": "1.4.1",
      "releaseTimestamp": "2015-05-17T04:25:07.299Z",
      "updateType": "minor",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() pins minor ranged versions 1`] = `
[
  {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "updateType": "pin",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() rejects complex range in-range updates 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() rejects in-range unsupported operator 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() rejects non-fully specified in-range updates 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() rejects reverse ordered less than greater than 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() replaces major complex ranged versions if configured 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^3.0.0",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() replaces minor complex ranged versions if configured 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() replaces non-range in-range updates 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns additional update if grouping but separateMinorPatch=true 1`] = `
[
  {
    "bucket": "patch",
    "newMajor": 0,
    "newMinor": 4,
    "newValue": "0.4.4",
    "newVersion": "0.4.4",
    "releaseTimestamp": "2011-06-10T17:20:04.719Z",
    "updateType": "patch",
  },
  {
    "bucket": "minor",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns both updates if automerging minor 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "newVersion": "0.4.4",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns complex object 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "1.3.0",
  "dependencyUrl": undefined,
  "fixedVersion": "1.3.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/kriskowal/q",
  "updates": [
    {
      "bucket": "non-major",
      "newMajor": 1,
      "newMinor": 4,
      "newValue": "1.4.1",
      "newVersion": "1.4.1",
      "releaseTimestamp": "2015-05-17T04:25:07.299Z",
      "updateType": "minor",
    },
  ],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns minor update if automerging both patch and minor 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "patch",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns multiple updates if grouping but separateMajorMinor=true 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns one update if grouping and separateMajorMinor=false 1`] = `
[
  {
    "bucket": "latest",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns patch minor and major 1`] = `
[
  {
    "bucket": "patch",
    "newMajor": 0,
    "newMinor": 8,
    "newValue": "0.8.12",
    "newVersion": "0.8.12",
    "releaseTimestamp": "2012-12-29T22:51:00.329Z",
    "updateType": "patch",
  },
  {
    "bucket": "minor",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns patch update even if separate patches not configured 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "patch",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns patch update if separateMinorPatch 1`] = `
[
  {
    "bucket": "patch",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "patch",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns rollback for pinned version 1`] = `
[
  {
    "bucket": "rollback",
    "newMajor": 0,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "updateType": "rollback",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() returns rollback for ranged version 1`] = `
[
  {
    "bucket": "rollback",
    "newMajor": 0,
    "newValue": "^0.9.7",
    "newVersion": "0.9.7",
    "updateType": "rollback",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should allow unstable versions if the current version is unstable 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 3,
    "newMinor": 1,
    "newValue": "3.1.0-dev.20180813",
    "newVersion": "3.1.0-dev.20180813",
    "releaseTimestamp": "2018-08-13T19:05:14.347Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should allow unstable versions if the ignoreUnstable=false 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 2,
    "newMinor": 5,
    "newValue": "2.5.17-beta.0",
    "newVersion": "2.5.17-beta.0",
    "releaseTimestamp": "2018-03-23T23:29:13.819Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should downgrade from missing versions 1`] = `
{
  "bucket": "rollback",
  "newMajor": 1,
  "newValue": "1.16.0",
  "newVersion": "1.16.0",
  "updateType": "rollback",
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should follow dist-tag even if newer version exists 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1-insiders.20180726",
    "newVersion": "3.0.1-insiders.20180726",
    "releaseTimestamp": "2018-07-26T18:20:51.679Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should ignore unstable versions from datasource 1`] = `
[
  {
    "bucket": "major",
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "2.0.0",
    "newVersion": "2.0.0",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should jump unstable versions if followTag 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1-insiders.20180726",
    "newVersion": "3.0.1-insiders.20180726",
    "releaseTimestamp": "2018-07-26T18:20:51.679Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should not jump unstable versions 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 3,
    "newMinor": 0,
    "newValue": "3.0.1",
    "newVersion": "3.0.1",
    "releaseTimestamp": "2018-07-30T16:21:13.150Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should roll back to dist-tag if current version is higher 1`] = `
[
  {
    "bucket": "rollback",
    "newMajor": 3,
    "newValue": "3.0.1-insiders.20180726",
    "newVersion": "3.0.1-insiders.20180726",
    "updateType": "rollback",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should treat zero zero caret ranges as pinned 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 0,
    "newValue": "^0.0.35",
    "newVersion": "0.0.35",
    "releaseTimestamp": "2017-04-27T16:59:06.479Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should update pinned versions if updatePinnedDependencies=true 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 0,
    "newValue": "0.0.35",
    "newVersion": "0.0.35",
    "releaseTimestamp": "2017-04-27T16:59:06.479Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() should warn if no version matches dist-tag 1`] = `[]`;

exports[`workers/repository/process/lookup/index .lookupUpdates() skips uncompatible versions for 8 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8",
  "dependencyUrl": undefined,
  "fixedVersion": "8",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "bucket": "major",
      "newMajor": 9,
      "newMinor": null,
      "newValue": "9",
      "newVersion": "9",
      "updateType": "major",
    },
  ],
  "versioning": "docker",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() skips uncompatible versions for 8.1 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8.1",
  "dependencyUrl": undefined,
  "fixedVersion": "8.1",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "bucket": "non-major",
      "newMajor": 8,
      "newMinor": 2,
      "newValue": "8.2",
      "newVersion": "8.2",
      "updateType": "minor",
    },
    {
      "bucket": "major",
      "newMajor": 9,
      "newMinor": 0,
      "newValue": "9.0",
      "newVersion": "9.0",
      "updateType": "major",
    },
  ],
  "versioning": "docker",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() skips uncompatible versions for 8.1.0 1`] = `
{
  "changelogUrl": undefined,
  "currentVersion": "8.1.0",
  "dependencyUrl": undefined,
  "fixedVersion": "8.1.0",
  "homepage": undefined,
  "isSingleVersion": true,
  "sourceUrl": "https://github.com/nodejs/node",
  "updates": [
    {
      "bucket": "non-major",
      "newMajor": 8,
      "newMinor": 2,
      "newValue": "8.2.5",
      "newVersion": "8.2.5",
      "updateType": "minor",
    },
  ],
  "versioning": "docker",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() skips undefined values 1`] = `
{
  "skipReason": "invalid-value",
  "updates": [],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() skips unsupported values 1`] = `
{
  "skipReason": "invalid-value",
  "updates": [],
  "versioning": "npm",
  "warnings": [],
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports > latest versions if configured 1`] = `
[
  {
    "bucket": "major",
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "2.0.3",
    "newVersion": "2.0.3",
    "releaseTimestamp": "2015-01-31T08:11:47.852Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports complex major hyphen ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x - 3.x",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports complex major ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^1.0.0 || ^2.0.0 || ^3.0.0",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports complex ranges 1`] = `
{
  "bucket": "non-major",
  "isRange": true,
  "newMajor": 0,
  "newMinor": 9,
  "newValue": "^0.7.0 || ^0.8.0 || ^0.9.0",
  "newVersion": "0.9.7",
  "releaseTimestamp": "2013-09-04T17:07:22.948Z",
  "updateType": "minor",
}
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports complex tilde ranges 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.2.0 || ~1.3.0 || ~1.4.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports in-range caret updates 1`] = `
[
  {
    "bucket": "non-major",
    "isBump": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports in-range gte updates 1`] = `
[
  {
    "bucket": "non-major",
    "isBump": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">=1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports in-range tilde patch updates 1`] = `
[
  {
    "bucket": "patch",
    "isBump": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 0,
    "newValue": "~1.0.1",
    "newVersion": "1.0.1",
    "releaseTimestamp": "2014-03-11T18:47:17.560Z",
    "updateType": "patch",
  },
  {
    "bucket": "minor",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports in-range tilde updates 1`] = `
[
  {
    "bucket": "patch",
    "isBump": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 0,
    "newValue": "~1.0.1",
    "newVersion": "1.0.1",
    "releaseTimestamp": "2014-03-11T18:47:17.560Z",
    "updateType": "patch",
  },
  {
    "bucket": "minor",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports lock file updates mixed with regular updates 1`] = `
[
  {
    "bucket": "patch",
    "isLockfileUpdate": true,
    "isRange": true,
    "newMajor": 0,
    "newMinor": 4,
    "newValue": "^0.4.0",
    "newVersion": "0.4.4",
    "releaseTimestamp": "2011-06-10T17:20:04.719Z",
    "updateType": "patch",
  },
  {
    "bucket": "minor",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "^0.9.0",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.0.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports majorgte updates 1`] = `
[
  {
    "bucket": "latest",
    "isBump": true,
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">=1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports minor and major upgrades for ranged versions 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "newVersion": "0.4.4",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() supports minor and major upgrades for tilde ranges 1`] = `
[
  {
    "isPin": true,
    "newMajor": 0,
    "newValue": "0.4.4",
    "newVersion": "0.4.4",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades .x complex minor ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.2.x - 1.4.x",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades .x major ranges without pinning 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.x",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades .x minor ranges 1`] = `
[
  {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "newVersion": "1.3.0",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades .x minor ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.x",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades equal minor ranges 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "=1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades less than equal major ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 2,
    "newMinor": 0,
    "newValue": "<= 2",
    "newVersion": "2.0.3",
    "releaseTimestamp": "2015-01-31T08:11:47.852Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades less than equal minor ranges 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades less than equal ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "<= 0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades less than major ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades less than ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "< 0.9.8",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 1.4.2",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades major greater than less than ranges without pinning 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 < 2.0.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades major less than equal ranges 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "<= 1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades major less than ranges without pinning 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "< 2.0.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades minor greater than less than equals ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <= 0.9.7",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <= 1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades minor greater than less than ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": ">= 0.5.0 <0.10",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": ">= 0.5.0 <1.5",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades minor ranged versions 1`] = `
[
  {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.1",
    "newVersion": "1.0.1",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades multiple caret ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "^0.9.0",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "^1.0.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades multiple tilde ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 0,
    "newMinor": 9,
    "newValue": "~0.9.0",
    "newVersion": "0.9.7",
    "releaseTimestamp": "2013-09-04T17:07:22.948Z",
    "updateType": "minor",
  },
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades shorthand major ranges without pinning 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades shorthand minor ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades tilde ranges 1`] = `
[
  {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.3.0",
    "newVersion": "1.3.0",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() upgrades tilde ranges without pinning 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.4.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() uses minimum version for vulnerabilityAlerts 1`] = `
[
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 0,
    "newValue": "1.0.1",
    "newVersion": "1.0.1",
    "releaseTimestamp": "2014-03-11T18:47:17.560Z",
    "updateType": "patch",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() uses the locked version for pinning 1`] = `
[
  {
    "isPin": true,
    "newMajor": 1,
    "newValue": "1.0.0",
    "newVersion": "1.0.0",
    "updateType": "pin",
  },
  {
    "bucket": "non-major",
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "1.4.1",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() widens .x OR ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1.x || 2.x || 3.x",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() widens major ranged versions if configured 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "^2.0.0 || ^3.0.0",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() widens minor ranged versions if configured 1`] = `
[
  {
    "bucket": "non-major",
    "isRange": true,
    "newMajor": 1,
    "newMinor": 4,
    "newValue": "~1.3.0 || ~1.4.0",
    "newVersion": "1.4.1",
    "releaseTimestamp": "2015-05-17T04:25:07.299Z",
    "updateType": "minor",
  },
]
`;

exports[`workers/repository/process/lookup/index .lookupUpdates() widens stanndalone major OR ranges 1`] = `
[
  {
    "bucket": "major",
    "isRange": true,
    "newMajor": 3,
    "newMinor": 8,
    "newValue": "1 || 2 || 3",
    "newVersion": "3.8.1",
    "releaseTimestamp": "2017-10-17T15:22:36.646Z",
    "updateType": "major",
  },
]
`;
